# vic

./: .gitignore  AGENTS.md  Cargo.toml  PORT_QWEN3_6_27B.md  README.md  assessment.md  build.rs  mvp.md  ref_check.py  refinement.md  roadmap.md  whitepaper.md
cuda/src/: cutlass_mla.cu  kernels.cu
reports/: phase0_baseline_122b.json  phase0_baseline_122b_isolated.json  phase0_baseline_122b_postguard.json  phase0_baseline_122b_postmit.json  phase0_baseline_35b.json  phase0_baseline_35b_postmit.json  phase0_baseline_summary.md  phase0_baseline_template.md  phase0_quick_122b_8132.json  phase0_quick_122b_8132_solo.json  phase0_quick_122b_8137_final.json  phase0_quick_35b_8131.json
scripts/: fetch_cutlass.sh  patch_cutlass.sh
src/: lib.rs  registry.rs  validation.rs
src/api/: server.rs
src/compute/: cuda_ffi.rs  kernels.rs  mod.rs
src/core/: config.rs  error.rs  types.rs
src/index/: coactivation.rs  domain.rs  hnsw_backend.rs  mod.rs  profiler.rs  vector_index.rs
src/runtime/: attention.rs  engine.rs  gear_scheduler.rs  generate.rs  mod.rs  query_planner.rs  tiered_kv.rs
src/storage/: buffer_manager.rs  convert.rs  format.rs  gguf.rs  io_engine.rs  mod.rs
tests/: integration_test.rs
tools/: ground_truth_ref.py  mixtral_l1_check.py  mixtral_reference.py  mla_intermediates.py  phase0_eval.py  qwen36_diff_layers.py  qwen36_hf_reference.py  smoke_qwen36_27b.sh  test_full_swiglu.py  test_int4_matmul.py  verify_e243_computation.py  verify_l6_moe.py
